Install Guides for Linux and Mac

--- a/OracleDockerSetupLinux.ipynb
+++ b/OracleDockerSetupLinux.ipynb
@@ -5,17 +5,17 @@
    "metadata": {},
    "source": [
     "## Installing Jupyter-lab and Docker environment on Linux\n",
-    "The following walk-through guides you through the steps needed to set up your enviroment to run Jupyter-lab, Oracle and Docker to build and run docker images for testing. This should work for either an on premises install or on Oracle's cloud using IaaS (Compute). This walkthough will serve primarily as a reminder to myself.\n",
+    "The following walk-through guides you through the steps needed to set up your enviroment to run [Jupyter-lab](https://jupyter.org/), [Oracle](https://www.oracle.com/database/technologies/) and [Docker](https://www.docker.com/) to build and run docker images for testing. This should work for either an on premises install or on Oracle's cloud using IaaS (Compute). This walkthough will serve primarily as a reminder to myself.\n",
     "\n",
-    "#### Prerequisites\n",
+    "### Prerequisites\n",
     "I'm making the assumption that you're running on Linux (I've a similar walkthrough for mac). In my example I'm using Oracle Enterprise Linux 7 (OEL). I'm also assuming a few other things\n",
     "* Python 3.6 or higher is installed\n",
     "* You have access to root either directly or via sudo. In this example I'm installing everything in the Oracle user account that has sudo privelege\n",
-    "* Docker is installed. If it isn't see this excellent guide [here](https://blogs.oracle.com/blogbypuneeth/a-simple-guide-to-docker-installation-on-oracle-linux-75). If you aren't running as root also make sure you follow this [final step](https://docs.docker.com/install/linux/linux-postinstall/) as well.\n",
+    "* Docker is installed. If it isn't, see this excellent [guide](https://blogs.oracle.com/blogbypuneeth/a-simple-guide-to-docker-installation-on-oracle-linux-75). If you aren't running as root also make sure you follow this [final step](https://docs.docker.com/install/linux/linux-postinstall/) as well.\n",
     "\n",
     "#### Install\n",
     "The install is pretty simple. It consists of setting up python, installing Oracle Instant client, installing Git and then cloning this directory to the server. Lets start with setting up the Python Environment\n",
-    "##### Python Setup\n",
+    "#### Python Setup\n",
     "By default OEL 7 runs Python 2 rather than Python 3 which is likely to change in the future, until then we have a few steps we need to run through. The first is to install pip and virtualenv. We can easily do this on OEL with yum\n",
     "```bash\n",
     "sudo yum install python36-pip\n",
@@ -31,7 +31,7 @@
     "virtualenv -p /usr/bin/python36 myvirtualenv\n",
     "source myvirtualenv/bin/activate\n",
     "```\n",
-    "This will create a directory call ```myvirtualenv``` (you can call it what you like) with it's own version of the python interpreter and pip. Once we \"active it\", any library we install will only be in this directory and won't effect the system as a whole. You should see you command prompt change when you activate it. It should look something like this\n",
+    "This will create a directory called ```myvirtualenv``` (you can call it what you like) with it's own version of the python interpreter and pip. Once we \"active it\", any library we install will only be in this directory and won't effect the system as a whole. You should see you command prompt change when you activate it. It should look something like this\n",
     "```bash\n",
     "[04:59 PM : oracle@ora18server ~]$ virtualenv -p /usr/bin/python36 myvirtualenv\n",
     "Running virtualenv with interpreter /usr/bin/python36\n",
@@ -62,7 +62,7 @@
     "```bash\n",
     "sudo yum install git\n",
     "```\n",
-    "We can now clone my IPython/Jupyter notebooks which provide you with the code for creating your own Python Libraries.\n",
+    "We can now clone my IPython/Jupyter notebooks from github which provides you with the code for creating your own Oracle Docker Images.\n",
     "```bash\n",
     "git clone https://github.com/domgiles/JuypterLabWork.git\n",
     "```\n",
@@ -73,8 +73,8 @@
     "sudo yum install oracle-instantclient18.3-basic\n",
     "```\n",
     "This will typically install the the software into ```/usr/lib/oracle/18.3```\n",
-    "#### Installing Juypter-Lab\n",
-    "In the JuypterLabWork directory that was created when we ran the git clone command there's a file called ```requirments.txt```. This is a list of modules needed to run the notebooks in that directory. To install them all you need to do is to run the command\n",
+    "#### Installing Jupyter-Lab\n",
+    "In the JupyterLabWork directory that was created when we ran the git clone command there's a file called ```requirments.txt```. This is a list of modules needed to run the notebooks in that directory. To install them all you need to do is to run the command\n",
     "```\n",
     "pip install -r requirements.txt\n",
     "```\n",
