Changes to functions to simplify copying files to docker node

--- a/OracleDockerDatabaseCreate.ipynb
+++ b/OracleDockerDatabaseCreate.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,155 +27,72 @@
     "import cx_Oracle\n",
     "from IPython.display import HTML, display\n",
     "import keyring\n",
+    "from ipynb.fs.full.OracleDockerDatabaseFunctions import list_images,list_containers,copy_to,create_and_run_script,containter_exec,containter_root_exec,copy_string_to_file\n",
     "\n",
     "client = docker.from_env(timeout=600)"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Helper Functions\n",
-    "The following functions are used a number of times in the build process. Rather than place them in a dedicate python script I've left them here for clarity.\n",
-    "\n",
-    "`copy_to()` copies a file from the host to a container"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>Tag</th>\n",
+       "        <th>id</th>\n",
+       "        <th>Size</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>dominicgiles:db18.0.0</td>\n",
+       "        <td>b4e9063e4d</td>\n",
+       "        <td>10.8 GB</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>db18.0.0:latest</td>\n",
+       "        <td>ab9b3eb4b6</td>\n",
+       "        <td>942.8 MB</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td></td>\n",
+       "        <td>bf1b5daee4</td>\n",
+       "        <td>318.0 MB</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>oraclelinux:7-slim</td>\n",
+       "        <td>c3d8693881</td>\n",
+       "        <td>117.3 MB</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>giaas.us.oracle.com:5001/dominic.giles/104213:db19000</td>\n",
+       "        <td>808b7de5b5</td>\n",
+       "        <td>7.8 GB</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>dbtools-docker.dockerhub-den.oraclecorp.com/oracle/sdw:18.4.0</td>\n",
+       "        <td>af2d2f4838</td>\n",
+       "        <td>1.8 GB</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>dbtools-docker.dockerhub-den.oraclecorp.com/oracle/database:18.3.0-ee</td>\n",
+       "        <td>c9eae81d87</td>\n",
+       "        <td>8.4 GB</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "def copy_to(script, src, dst):\n",
-    "    \n",
-    "    with open(src, 'w') as f:\n",
-    "        f.write(script)\n",
-    "    \n",
-    "    name, dst = dst.split(':')\n",
-    "    container = client.containers.get(name)\n",
-    "\n",
-    "    os.chdir(os.path.dirname(src))\n",
-    "    srcname = os.path.basename(src)\n",
-    "    tar = tarfile.open(src + '.tar', mode='w')\n",
-    "    try:\n",
-    "        tar.add(srcname)\n",
-    "    finally:\n",
-    "        tar.close()\n",
-    "\n",
-    "    data = open(src + '.tar', 'rb').read()\n",
-    "    container.put_archive(os.path.dirname(dst), data)\n",
-    "    os.remove(src)\n",
-    "    os.remove(src + '.tar')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "`create_and_run_script()` allows us to take a string, save it the container and run it. This gets round a few redirection issues with docker exec command."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def create_and_run_script(script, script_local_path, script_target_path,  command, target):\n",
-    "    \n",
-    "    copy_to(script, script_local_path, target.name+\":\"+script_target_path)\n",
-    "\n",
-    "    print(command)\n",
-    "    target.start()\n",
-    "    output = target.exec_run(command,\n",
-    "                              stderr=True,\n",
-    "                              stdout=True,\n",
-    "                              stream=True\n",
-    "                              )\n",
-    "    for line in output[1]:\n",
-    "        o_line = line.decode('UTF-8')\n",
-    "        print(o_line.strip())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "`containter_exec()` is a wrapper for the docker `exec_run()` API call that allows us run commands inside of a container. The wrapper just captures the IO and writes it to stdout on the host"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def containter_exec(target, target_command):\n",
-    "    \n",
-    "    target.start()\n",
-    "    output = target.exec_run(target_command,\n",
-    "                                  stderr=True,\n",
-    "                                  stdout=True,\n",
-    "                                  stream=True\n",
-    "                                  )\n",
-    "    for line in output[1]:\n",
-    "        o_line = line.decode('UTF-8')\n",
-    "        print(o_line.strip())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "`list_images()` just lists the available images on the "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def list_images():\n",
-    "    table = PrettyTable([\"Tag\", \"id\", \"Size\"])\n",
-    "    check_for_tags = lambda i: i.tags[0] if len(i.tags) != 0 else ''\n",
-    "    for image in client.images.list():\n",
-    "        table.add_row(\n",
-    "            [check_for_tags(image), image.short_id.replace('sha256:', ''), humanize.naturalsize(image.attrs['Size'])])\n",
-    "    display(HTML(table.get_html_string()))\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "`list_containers()` lists any existing containers"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def list_containers():\n",
-    "    table = PrettyTable([\"Name\", \"Short id\", \"Status\", \"IP Address\"])\n",
-    "    table.align[\"Name\"] = \"l\"\n",
-    "    for container in client.containers.list(all=True):\n",
-    "        table.add_row([container.name, container.short_id, container.status, container.attrs['NetworkSettings']['IPAddress']])\n",
-    "        # for key, value in container.attrs.iteritems():\n",
-    "        #     print(key, value)\n",
-    "    display(HTML(table.get_html_string()))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "list_images()"
+    "list_images(client)"
    ]
   },
   {
@@ -188,13 +105,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# The following parameters are specific to your install and almost certainly need to be changed\n",
-    "image_name = '808b7de5b5' # Taken from the id value above\n",
+    "image_name = 'b4e9063e4d' # Taken from the id value above\n",
+    "host_oradata = '/Users/dgiles/oradata18c' # The directory on the host where primary database will be persisted\n",
+    "sb_host_oradata = '/Users/dgiles/oradatastby' # The direcotry on the host where the standby database will be persisted\n",
+    "#\n",
     "# The rest are fairly generic and can be changed if needed\n",
+    "oracle_version = '18.0.0'\n",
     "db_name = 'ORCL'\n",
     "stby_name = 'ORCL_STBY'\n",
     "sys_password =  keyring.get_password('docker','sys') # I'm just using keyring to hide my password but you can set it to a simple sting i.e. 'mypassword'\n",
@@ -202,14 +123,13 @@
     "p_host_name = 'oracleprimary'\n",
     "sb_host_name = 'oraclestby'\n",
     "total_memory = 2048\n",
-    "host_oradata = '/Users/dgiles/oradata'\n",
-    "sb_host_oradata = '/Users/dgiles/oradatastby'\n",
+    "\n",
     "container_oradata = '/u01/app/oracle/oradata'\n",
     "o_base = '/u01/app/oracle'\n",
     "r_area = f'{o_base}/oradata/recovery_area'\n",
     "o_area = f'{o_base}/oradata/'\n",
     "a_area = f'{o_base}/admin/ORCL/adump'\n",
-    "o_home = f'{o_base}/product/19.0.0/dbhome_1'\n",
+    "o_home = f'{o_base}/product/{oracle_version}/dbhome_1'\n",
     "t_admin = f'{o_base}/oradata/dbconfig'\n",
     "log_size = 200\n"
    ]
@@ -224,9 +144,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "path = f'{o_home}/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin'\n",
+    "\n",
+    "p_container = client.containers.create(image_name,\n",
+    "                                       command=\"/bin/bash\",\n",
+    "                                       hostname=p_host_name,\n",
+    "                                       tty=True,\n",
+    "                                       stdin_open=True,\n",
+    "                                       auto_remove=False,\n",
+    "                                       name=p_host_name,\n",
+    "                                       shm_size='3G',\n",
+    "                                       # network_mode='host',\n",
+    "                                       ports={1521:1521,5500:5500},\n",
+    "                                       volumes={host_oradata: {'bind': container_oradata, 'mode': 'rw'}},\n",
+    "                                       environment={'PATH':path,'ORACLE_SID': db_name, 'ORACLE_BASE': o_base,'TNS_ADMIN': t_admin}\n",
+    "                                       )\n",
+    "\n",
+    "p_container.start()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[WARNING] [DBT-06208] The 'SYS' password entered does not conform to the Oracle recommended standards.\n",
+      "   CAUSE: \n",
+      "a. Oracle recommends that the password entered should be at least 8 characters in length, contain at least 1 uppercase character, 1 lower case character and 1 digit [0-9].\n",
+      "b.The password entered is a keyword that Oracle does not recommend to be used as password\n",
+      "   ACTION: Specify a strong password. If required refer Oracle documentation for guidelines.\n",
+      "[WARNING] [DBT-06208] The 'SYSTEM' password entered does not conform to the Oracle recommended standards.\n",
+      "   CAUSE: \n",
+      "a. Oracle recommends that the password entered should be at least 8 characters in length, contain at least 1 uppercase character, 1 lower case character and 1 digit [0-9].\n",
+      "b.The password entered is a keyword that Oracle does not recommend to be used as password\n",
+      "   ACTION: Specify a strong password. If required refer Oracle documentation for guidelines.\n",
+      "[WARNING] [DBT-06208] The 'PDBADMIN' password entered does not conform to the Oracle recommended standards.\n",
+      "   CAUSE: \n",
+      "a. Oracle recommends that the password entered should be at least 8 characters in length, contain at least 1 uppercase character, 1 lower case character and 1 digit [0-9].\n",
+      "b.The password entered is a keyword that Oracle does not recommend to be used as password\n",
+      "   ACTION: Specify a strong password. If required refer Oracle documentation for guidelines.\n",
+      "Prepare for db operation\n",
+      "\n",
+      "8% complete\n",
+      "\n",
+      "Copying database files\n",
+      "\n",
+      "31% complete\n",
+      "Creating and starting Oracle instance\n",
+      "\n",
+      "32% complete\n",
+      "36% complete\n",
+      "\n",
+      "40% complete\n",
+      "\n",
+      "43% complete\n",
+      "\n",
+      "46% complete\n",
+      "\n",
+      "Completing Database Creation\n",
+      "\n",
+      "51% complete\n",
+      "53% complete\n",
+      "54% complete\n",
+      "\n",
+      "Creating Pluggable Databases\n",
+      "58% complete\n",
+      "\n",
+      "77% complete\n",
+      "Executing Post Configuration Actions\n",
+      "\n",
+      "100% complete\n",
+      "\n",
+      "Database creation complete. For details check the logfiles at:\n",
+      " /u01/app/oracle/cfgtoollogs/dbca/ORCL.\n",
+      "Database Information:\n",
+      "Global Database Name:ORCL\n",
+      "System Identifier(SID):ORCL\n",
+      "\n",
+      "Look at the log file \"/u01/app/oracle/cfgtoollogs/dbca/ORCL/ORCL.log\" for further details.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "statement = f'''dbca -silent \\\n",
     " -createDatabase \\\n",
@@ -251,25 +258,6 @@
     " -ignorePreReqs\\\n",
     " '''\n",
     "\n",
-    "path = f'{o_home}/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin'\n",
-    "\n",
-    "p_container = client.containers.create(image_name,\n",
-    "                                       command=\"/bin/bash\",\n",
-    "                                       hostname=p_host_name,\n",
-    "                                       tty=True,\n",
-    "                                       stdin_open=True,\n",
-    "                                       auto_remove=False,\n",
-    "                                       name=p_host_name,\n",
-    "                                       shm_size='3G',\n",
-    "                                       # network_mode='host',\n",
-    "                                       ports={1521:1521,5500:5500},\n",
-    "                                       volumes={host_oradata: {'bind': container_oradata, 'mode': 'rw'}},\n",
-    "                                       environment={'PATH':path,'ORACLE_SID': db_name, 'ORACLE_BASE': o_base,'TNS_ADMIN': t_admin}\n",
-    "                                       )\n",
-    "\n",
-    "p_container.start()\n",
-    "p_ip_adress = p_container.attrs['NetworkSettings']['IPAddress']\n",
-    "\n",
     "containter_exec(p_container, statement)\n"
    ]
   },
@@ -283,10 +271,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
+    "p_ip_adress = p_container.attrs['NetworkSettings']['IPAddress']\n",
+    "\n",
     "p_listener = f'''LISTENER=\n",
     "    (DESCRIPTION=\n",
     "        (ADDRESS = (PROTOCOL=tcp)(HOST={p_ip_adress})(PORT=1521))\n",
@@ -303,11 +293,11 @@
     "        )\n",
     "    ) \n",
     "'''\n",
-    "copy_to(p_listener, f'/tmp/listener.ora', f'{p_host_name}:{t_admin}/listener.ora')\n",
+    "copy_string_to_file(p_listener, f'{t_admin}/listener.ora', p_container)\n",
     "\n",
     "contents = '''NAMES.DIRECTORY_PATH= (TNSNAMES, EZCONNECT)'''\n",
     "\n",
-    "copy_to(contents, '/tmp/sqlnet.ora',f'{p_host_name}:{t_admin}/sqlnet.ora')\n",
+    "copy_string_to_file(contents, f'{t_admin}/sqlnet.ora', p_container)\n",
     "\n",
     "contents = f'''\n",
     "ORCL = \n",
@@ -319,8 +309,7 @@
     "    ) \n",
     "  ) \n",
     "'''\n",
-    "\n",
-    "copy_to(contents, '/tmp/tnsnames.ora', f'{p_host_name}:{t_admin}/tnsnames.ora')"
+    "copy_string_to_file(contents, f'{t_admin}/tnsnames.ora', p_container)"
    ]
   },
   {
@@ -332,9 +321,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LSNRCTL for Linux: Version 18.0.0.0.0 - Production on 14-MAR-2019 19:40:59\n",
+      "\n",
+      "Copyright (c) 1991, 2018, Oracle.  All rights reserved.\n",
+      "Starting /u01/app/oracle/product/18.0.0/dbhome_1/bin/tnslsnr: please wait...\n",
+      "TNSLSNR for Linux: Version 18.0.0.0.0 - Production\n",
+      "System parameter file is /u01/app/oracle/oradata/dbconfig/listener.ora\n",
+      "Log messages written to /u01/app/oracle/diag/tnslsnr/oracleprimary/listener/alert/log.xml\n",
+      "Listening on: (DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=172.17.0.2)(PORT=1521)))\n",
+      "Listening on: (DESCRIPTION=(ADDRESS=(PROTOCOL=ipc)(KEY=EXTPROC1521)))\n",
+      "\n",
+      "Connecting to (DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=172.17.0.2)(PORT=1521)))\n",
+      "STATUS of the LISTENER\n",
+      "------------------------\n",
+      "Alias                     LISTENER\n",
+      "Version                   TNSLSNR for Linux: Version 18.0.0.0.0 - Production\n",
+      "Start Date                14-MAR-2019 19:40:59\n",
+      "Uptime                    0 days 0 hr. 0 min. 0 sec\n",
+      "Trace Level               off\n",
+      "Security                  ON: Local OS Authentication\n",
+      "SNMP                      OFF\n",
+      "Listener Parameter File   /u01/app/oracle/oradata/dbconfig/listener.ora\n",
+      "Listener Log File         /u01/app/oracle/diag/tnslsnr/oracleprimary/listener/alert/log.xml\n",
+      "Listening Endpoints Summary...\n",
+      "  (DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=172.17.0.2)(PORT=1521)))\n",
+      "  (DESCRIPTION=(ADDRESS=(PROTOCOL=ipc)(KEY=EXTPROC1521)))\n",
+      "Services Summary...\n",
+      "Service \"ORCL_DGMGRL\" has 1 instance(s).\n",
+      "  Instance \"ORCL\", status UNKNOWN, has 1 handler(s) for this service...\n",
+      "The command completed successfully\n"
+     ]
+    }
+   ],
    "source": [
     "containter_exec(p_container, 'lsnrctl start')"
    ]
@@ -365,8 +390,7 @@
     "                                       volumes={sb_host_oradata: {'bind': container_oradata, 'mode': 'rw'}},\n",
     "                                       environment={'PATH':path,'ORACLE_SID':db_name,'ORACLE_BASE':o_base,'TNS_ADMIN':t_admin}\n",
     "                                       )\n",
-    "sb_container.start()\n",
-    "sb_ip_adress = sb_container.attrs['NetworkSettings']['IPAddress']"
+    "sb_container.start()\n"
    ]
   },
   {
@@ -425,6 +449,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "sb_ip_adress = sb_container.attrs['NetworkSettings']['IPAddress']\n",
+    "\n",
     "contents = f'''\n",
     "ORCL = \n",
     "  (DESCRIPTION = \n",
@@ -445,8 +471,8 @@
     "  ) \n",
     "'''\n",
     "\n",
-    "copy_to(contents, '/tmp/tnsnames.ora', f'{p_host_name}:{t_admin}/tnsnames.ora')\n",
-    "copy_to(contents, '/tmp/tnsnames.ora', f'{sb_host_name}:{t_admin}/tnsnames.ora')\n",
+    "copy_string_to_file(contents, f'{t_admin}/tnsnames.ora', p_container)\n",
+    "copy_string_to_file(contents, f'{t_admin}/tnsnames.ora', sb_container)\n",
     "\n",
     "sb_listener = f'''LISTENER=\n",
     "    (DESCRIPTION=\n",
@@ -464,11 +490,11 @@
     "        )\n",
     "    ) \n",
     "'''\n",
-    "copy_to(sb_listener, '/tmp/listener.ora', f'{sb_host_name}:{t_admin}/listener.ora')\n",
+    "copy_string_to_file(sb_listener, f'{t_admin}/listener.ora', sb_container)\n",
     "\n",
     "contents = '''NAMES.DIRECTORY_PATH= (TNSNAMES, EZCONNECT)'''\n",
     "\n",
-    "copy_to(contents, '/tmp/sqlnet.ora',f'{sb_host_name}:{t_admin}/sqlnet.ora')"
+    "copy_string_to_file(contents, f'{t_admin}/sqlnet.ora', sb_container)"
    ]
   },
   {
@@ -623,7 +649,7 @@
    "outputs": [],
    "source": [
     "contents = f\"DB_NAME='{db_name}'\\n\"\n",
-    "copy_to(contents, f'/tmp/init{db_name}.ora', f'{sb_host_name}:/tmp/init{db_name}.ora')"
+    "copy_string_to_file(contents, f'/tmp/init{db_name}.ora', sb_container)"
    ]
   },
   {
