--- a/OracleDockerDatabaseFunctions.ipynb
+++ b/OracleDockerDatabaseFunctions.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,6 +22,7 @@
     "from prettytable import PrettyTable\n",
     "from IPython.display import HTML, display, Markdown\n",
     "import humanize\n",
+    "import tempfile\n",
     "import re"
    ]
   },
@@ -66,8 +67,6 @@
     "    table.align[\"Name\"] = \"l\"\n",
     "    for container in client.containers.list(all=True):\n",
     "        table.add_row([container.name, container.short_id, container.status, container.attrs['NetworkSettings']['IPAddress']])\n",
-    "        # for key, value in container.attrs.iteritems():\n",
-    "        #     print(key, value)\n",
     "    display(HTML(table.get_html_string()))"
    ]
   },
@@ -99,6 +98,40 @@
     "    container.put_archive(path=os.path.dirname(dest), data=tar_data)\n",
     "#     os.remove(src)\n",
     "    os.remove(src + '.tar')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```copy_string_to_file``` has parameters for a string, the file to put the string into (container) and the reference to the container"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def copy_string_to_file(string, dest, container):\n",
+    "    \n",
+    "    filename = os.path.basename(dest)\n",
+    "    tempdir = tempfile.gettempdir()\n",
+    "    \n",
+    "    with open(os.path.join(tempdir,filename),'w') as tf:\n",
+    "        tf.write(string)\n",
+    "   \n",
+    "    os.chdir(tempdir)\n",
+    "    tar = tarfile.open(filename + '.tar', mode='w')\n",
+    "    try:\n",
+    "        tar.add(filename)\n",
+    "    finally:\n",
+    "        tar.close()\n",
+    "\n",
+    "    tar_data = open(filename + '.tar', 'rb').read()\n",
+    "    container.put_archive(path=os.path.dirname(dest), data=tar_data)\n",
+    "    os.remove(filename + '.tar')\n",
+    "    os.remove(filename)"
    ]
   },
   {
