Added new function call

--- a/OracleDockerImage.ipynb
+++ b/OracleDockerImage.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Build Docker Oracle Database base image\n",
+    "## Build Docker Oracle Database Base Image\n",
     "The following notebook goes through the process of building an Oracle Docker image of the Oracle Database. If you are just wanting to get the Oracle Database running inside of Docker I strongly suggest that you use the docker files and guides in the [Oracle Github repository](https://github.com/oracle/docker-images/tree/master/OracleDatabase/SingleInstance). The approach documented below is very much for someone who is interested in a high level of control over the various steps in the installation and configuration of the Oracle Database or simply to understand how the various teps work. \n",
     "\n",
     "#### Prerequisites\n",
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,8 +28,7 @@
     "from IPython.display import HTML, display, Markdown\n",
     "import humanize\n",
     "import re\n",
-    "from ipynb.fs.full.OracleDockerDatabaseFunctions import list_images\n",
-    "from ipynb.fs.full.OracleDockerDatabaseFunctions import list_containers\n",
+    "from ipynb.fs.full.OracleDockerDatabaseFunctions import list_images,list_containers,copy_to,create_and_run_script,containter_exec,containter_root_exec\n",
     "\n",
     "client = docker.from_env(timeout=600)"
    ]
@@ -44,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,7 +496,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Commit the container to create an image"
+    "### Commit the container to create an image\n",
+    "The following code should be changed to relect you\n"
    ]
   },
   {
@@ -517,7 +517,8 @@
     }
    ],
    "source": [
-    "db_container.commit(repository='dominicgiles',tag='db18.0.0')"
+    "repository_name = 'dominicgiles'\n",
+    "db_container.commit(repository=repository_name,tag='db{oracle_version}')"
    ]
   },
   {
@@ -540,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -554,8 +555,8 @@
        "        <th>IP Address</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>oracle18c</td>\n",
-       "        <td>864f5f91d8</td>\n",
+       "        <td>oracleprimary</td>\n",
+       "        <td>13e939c759</td>\n",
        "        <td>running</td>\n",
        "        <td>172.17.0.2</td>\n",
        "    </tr>\n",
