--- a/OracleDockerDatabaseCreate.ipynb
+++ b/OracleDockerDatabaseCreate.ipynb
@@ -100,7 +100,7 @@
    "metadata": {},
    "source": [
     "### Configuration Parameters\n",
-    "The following section contains the parameters for setting the configuration of the install. Only the first parameter (`image_name`) needs to be changed."
+    "The following section contains the parameters for setting the configuration of the install. The following parameters `image_name`,`host_oradata`,`sb_host_oradata` need to be changed, although `sb_host_oradata` is only important if you are planning on installing a standby database."
    ]
   },
   {
@@ -139,7 +139,7 @@
    "metadata": {},
    "source": [
     "## Create Primary Database\n",
-    "This code does the heavy lifting. It creates a container **oracleprimary** running the Oracle Database. It uses DBCA and configures features like automatic memory mangement, Oracle Managed Files and sets the size of the SGA and redo logs. It prints out the status of the creation. the containers 1521 port is mapped onto the the hosts 1521 port so to connect fromt he host via a tool like sqlplus all you'd need to do is sqlplus soe/soe@//locahost/soe. **NOTE :** This step typically takes 10 to 12 minutes and is typically only run once. If you only need a standalone database this may be the only step you need. "
+    "This code does the heavy lifting. It creates a container **oracleprimary** (unless you changed the paramter) running the Oracle Database.  The containers 1521 port is mapped onto the the hosts 1521 port. This means that to connect from the host, via a tool like sqlplus, all you'd need to do is `sqlplus soe/soe@//locahost/soe`."
    ]
   },
   {
@@ -165,6 +165,13 @@
     "                                       )\n",
     "\n",
     "p_container.start()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The next step uses DBCA and configures features like Automatic Memory Mangement, Oracle Managed Files and sets the size of the SGA and redo logs. It prints out the status of the creation during it's progression.  **NOTE :** This step typically takes 10 to 12 minutes."
    ]
   },
   {
@@ -362,6 +369,13 @@
    ],
    "source": [
     "containter_exec(p_container, 'lsnrctl start')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "At this stage you'll have a "
    ]
   },
   {
